fix: fixed modals too long with scroll bar

--- a/less/styles.less
+++ b/less/styles.less
@@ -300,6 +300,8 @@ main {
     top: -500px;
     left: 50%;
     width: 600px;
+    max-height: 90%;
+    overflow-y: auto;
     margin-left: -300px;
     background-color: @background-lighter;
     border-radius: 10px;
